Prevent long strings from overflowing

--- a/public/styles/category.css
+++ b/public/styles/category.css
@@ -120,10 +120,12 @@ main > hr {
 }
 
 .category > h2 {
+  width: 50%;
   font-size: 4rem;
   font-weight: 500;
   color: #fff;
   text-shadow: 0 0 10px black;
+  word-break: break-all;
 }
 
 .category > img {
